// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test custom loader components should render the CadreLoader component properly 1`] = `
<LoaderComponent
  img="engineerLoaderGif.gif"
/>
`;

exports[`test custom loader components should render the PMLoader properly 1`] = `
<LoaderComponent
  img="programManagerLoader.gif"
/>
`;

exports[`test custom loader components should render the generic loader component properly 1`] = `
<div
  className="custom-loader"
>
  <img
    alt="loader"
    className="custom-loader-img"
    src="engineerLoaderGif.gif"
  />
</div>
`;
